syntax = "proto3";

package api.server.compute.v1;

import "google/api/annotations.proto";

option go_package = "github.com/mohaijiang/computeshare-server/api/compute/v1;v1";
option java_multiple_files = true;
option java_package = "api.compute.v1";

service ComputeInstance {
	// 查询规格
	rpc ListComputeSpec(ListComputeSpecRequest) returns (ListComputeSpecReply) {
		option (google.api.http) = {
			get: "/v1/compute/spec",
		};
	}

	// 查询镜像
	rpc ListComputeImage(ListComputeImageRequest) returns (ListComputeImageReply) {
		option (google.api.http) = {
			get: "/v1/compute/image",
		};
	}

	// 查询资源规格价格
	rpc ListComputeSpecPrice(ListComputeSpecPriceRequest) returns (ListComputeSpecPriceReply){
		option (google.api.http) = {
			get: "/v1/compute/spec/price",
		};
	}

	// 创建实例
	rpc Create (CreateInstanceRequest) returns (CreateInstanceReply){
		option (google.api.http) = {
			post: "/v1/instance",
			body: "*",
		};
	};

	//删除实例
	rpc Delete (DeleteInstanceRequest) returns (CommonReply){
		option (google.api.http) = {
			delete: "/v1/instance/{id}",
		};
	};

	//获取实例详情
	rpc Get (GetInstanceRequest) returns (GetInstanceReply) {
		option (google.api.http) = {
			get: "/v1/instance/{id}",
		};
	};

	//实例列表
	rpc List (ListInstanceRequest) returns (ListInstanceReply){
		option (google.api.http) = {
			get: "/v1/instance",
		};
	};

	//停止实例
	rpc StopInstance(GetInstanceRequest) returns (CommonReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/stop",
			body: "*",
		};
	}

	//启动实例
	rpc StartInstance(GetInstanceRequest) returns (CommonReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/start",
			body: "*",
		};
	}

	// 重启实例
	rpc RestartInstance(GetInstanceRequest) returns (CommonReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/restart",
			body: "*",
		};
	}

	// 重建实例
	rpc ReCreateInstance(RecreateInstanceRequest) returns (CommonReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/recreate",
			body: "*",
		};
	}

	// 重命名实例
	rpc RenameInstance(RenameInstanceRequest) returns (CommonReply) {
		option (google.api.http) = {
			put: "/v1/instance/{id}/rename",
			body: "*",
		};
	}

	// 获取vnc 地址
	rpc GetInstanceVncURL(GetInstanceRequest) returns (GetInstanceVncURLReply) {
		option (google.api.http) = {
			get: "/v1/instance/{id}/vnc",
		};
	}
}

message ListComputeSpecRequest {

}

message ListComputeSpecReply {
	int32 code = 1;
	string message = 2;
	repeated ComputeSpec data = 3;
}

message ListComputeImageRequest {

}

message ListComputeImageReply {
	int32 code = 1;
	string message = 2;
	repeated ComputeImage data = 3;
}

message ComputeImage {
	int32 id = 1;
	string name = 2;
	string image = 3;
	string tag = 4;
	int32 port = 5;
}

message ComputeSpec {
	int32 id = 1;
	string core = 2;
	string memory = 3;
}

message ListComputeSpecPriceRequest {
	int32 spec_id = 1;
}

message ListComputeSpecPriceReply {
	int32 code = 1;
	string message = 2;
	ComputeSpecPrice data = 3;
}

message ComputeSpecPrice {
	int32 day = 1;
	float cycle =2;
}

message CreateInstanceRequest {
	int32 spec_id = 1;
	int32 image_id = 2;
	string name = 3;
	string public_key = 4;
	string password = 5;
	string docker_compose = 6;
}

message RecreateInstanceRequest {
	string id = 1;
	int32 image_id = 2;
	string public_key = 3;
	string password = 4;
	string docker_compose = 5;
}

message PortBinding {
	string listen_port = 1;
	string target_port = 2;
}

message CreateInstanceReply {
	message Data {
		string id = 1;
		string name = 2;
	}
	int32 code = 1;
	string message = 2;
	Data data = 3;
}

message DeleteInstanceRequest {
	string id = 1;
}

message GetInstanceRequest {
	string id = 1;
}
message Instance {
	string id = 1;
	string name = 2;
	int32 status = 3;
	int64 expiration_time = 4;
	string image_name = 5;
	string core = 6;
	string memory = 7;
	repeated InstanceStats stats = 8;
	string containerId = 9;
	string command = 10;
	string agent_id = 11;
	int32 image_id = 12;
}

message InstanceStats {
	string id = 1;
	float cpu_usage = 2;
	float memory_usage = 3;
	int64 StatsTime = 4;
}

message GetInstanceReply {
	int32 code = 1;
	string message = 2;
	Instance data = 3;
}

message ListInstanceRequest {
	optional int32 status = 1 ;
}
message ListInstanceReply {
	int32 code = 1;
	string message = 2;
	repeated Instance data = 3;
}

message CommonReply {
	int32 code = 1;
	string message = 2;
}

message GetInstanceVncURLReply {
	int32 code = 1;
	string message = 2;
	string data = 3;
}

message RenameInstanceRequest {
	string id = 1;
	string name = 2;
}
